mysqlcluster/k8s/mysql-slaver.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-slaver
  labels:
    name: mysql-slaver
spec:
  ports:
    - port: 3306
      targetPort: 3306
  type: NodePort
  selector:
    name: mysql-slaver
